--- a/tela-inicial/telaInicial.html
+++ b/tela-inicial/telaInicial.html
@@ -50,11 +50,11 @@
           <div class="input-group">
             <label for="type">Tipo</label>
             <select id="tipo" required>
-              <option value="entrada">Entrada</option>
-              <option value="saida">Saída</option>
+              <option value="Entrada">Entrada</option>
+              <option value="Saida">Saida</option>
             </select>
           </div>
-          <button type="submit">Adicionar</button>
+          <button type="submit" class="btn-form">Adicionar</button>
           <p class="error-message"></p>
         </form>
       </section>
